--- a/index.html
+++ b/index.html
@@ -1,17 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <h1> rfrfxcvxxcvr</h1>
-<div> afsfsd</div>
 
-  <script src="js/main.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <div class="wrapper">
+        <header class="header">
+            <div class="container">
+                <div class="header__inner">
+                    <a href="#" class="logo">
+                        <img src="images/logo.svg" alt="" class="logo__img">
+                    </a>
+                    <nav class="menu">
+                        <ul class="menu__items"></ul>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Главная</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Меню</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Акции</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Вакансии</a>
+                        </li>
+                        </ul>
+                    </nav>
+                    <nav class="header__contacts">
+                        <img src="images/contacts__img-phone.svg" alt="" class="contacts__img-phone">
+                        <a href="tel:+37377995875" class="contact__phone">+373 779 95 875</a>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <main class="main">
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="container">
+                            <div class="top__slide" style="background-image: url(images/slider-1.jpg);">
+                                <div class="top__slide-inner">
+                                    <h1 class="top__title">Eclipse</h1>
+                                    <blockquote class="top__blockquote">"Вкус, который затмевает все остальное"
+                                    </blockquote>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="container">
+                            <div class="top__slide" style="background-image: url(images/slider-2.jpg);">
+                                <div class="top__slide-inner">
+                                    <h1 class="top__title">Eclipse</h1>
+                                    <blockquote class="top__blockquote">"Вкус, который затмевает все остальное"
+                                    </blockquote>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="container">
+                            <div class="top__slide" style="background-image: url(images/slider-3.jpg);">
+                                <div class="top__slide-inner">
+                                    <h1 class="top__title">Eclipse</h1>
+                                    <blockquote class="top__blockquote">"Вкус, который затмевает все остальное"
+                                    </blockquote>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="container">
+                            <div class="top__slide" style="background-image: url(images/slider-4.jpg);">
+                                <div class="top__slide-inner">
+                                    <h1 class="top__title">Eclipse</h1>
+                                    <blockquote class="top__blockquote">"Вкус, который затмевает все
+                                        остальное"</blockquote>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-prev">
+                        <img src="images/left.png" alt="" class="arrow__slider">
+                    </div>
+                    <div class="swiper-button-next">
+                        <img src="images/right.png" alt="" class="arrow__slider">
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
