MENU AND ACCORDEON

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Andika:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -36,7 +36,7 @@
                             <a href="#" class="menu__link">Акции</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Вакансии</a>
+                            <a href="#" class="menu__link">О Нас</a>
                         </li>
                         </ul>
                     </nav>
@@ -103,6 +103,136 @@
                 </div>
             </div>
         </main>
+        <section class="popular__dishes">
+            <div class="container">
+                <h2 class="section__title">Популярные блюда</h2>
+                <div class="popular__dishes-inner">
+                    <div class="popular__dishes-item">
+                        <img src="images/karbonara.jpg" alt="" class="dishes__img">
+                        <h3 class="dishes__name">Карбонара</h3>
+                        <p class="dishes__price">109 руб.</p>
+                        <button class="basket">В корзину</button>
+                    </div>
+                    <div class="popular__dishes-item">
+                        <img src="images/califirnia.jpg" alt="" class="dishes__img">
+                        <h3 class="dishes__name">Калифорния</h3>
+                        <p class="dishes__price">85 руб.</p>
+                        <button class="basket">В корзину</button>
+                    </div>
+                    <div class="popular__dishes-item">
+                        <img src="images/pepperoni.jpg" alt="" class="dishes__img">
+                        <h3 class="dishes__name">Пепперони</h3>
+                        <p class="dishes__price">110 руб.</p>
+                        <button class="basket">В корзину</button>
+                    </div>
+                    <div class="popular__dishes-item">
+                        <img src="images/cezar.jpg" alt="" class="dishes__img">
+                        <h3 class="dishes__name">Цезарь</h3>
+                        <p class="dishes__price">70 руб.</p>
+                        <button class="basket">
+                            <p>В корзину</p>
+                        </button>
+                    </div>
+                    <div class="popular__dishes-item">
+                        <img src="images/burger.jpg" alt="" class="dishes__img">
+                        <h3 class="dishes__name">Говяжий</h3>
+                        <p class="dishes__price">110 руб.</p>
+                        <button class="basket">В корзину</button>
+                    </div>
+                    <div class="popular__dishes-item">
+                        <img src="images/limonade.jpg" alt="" class="dishes__img">
+                        <h3 class="dishes__name">Лимонад</h3>
+                        <p class="dishes__price">45 руб.</p>
+                        <button class="basket">В корзину</button>
+                    </div>
+                    <div class="popular__dishes-item">
+                        <img src="images/supreme.jpg" alt="" class="dishes__img">
+                        <h3 class="dishes__name">Суприм</h3>
+                        <p class="dishes__price">99 руб.</p>
+                        <button class="basket">В корзину</button>
+                    </div>
+                    <div class="popular__dishes-item">
+                        <img src="images/potato.jpg" alt="" class="dishes__img">
+                        <h3 class="dishes__name">Картошка фри</h3>
+                        <p class="dishes__price">52 руб.</p>
+                        <button class="basket">В корзину</button>
+                    </div>
+                    <div class="popular__dishes-item">
+                        <img src="images/burger-m.jpg" alt="" class="dishes__img">
+                        <h3 class="dishes__name">Мексиканский</h3>
+                        <p class="dishes__price">89 руб.</p>
+                        <button class="basket">В корзину</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="action__accordeon">
+            <div class="container">
+                <h3 class="section__title">Наши Акции</h3>
+                <div class="accordeon__inner">
+                    <div class="accordeon__item">
+                        <div class="accordeon__triger">
+                            <img src="images/accordeon-arrow.svg" alt="" class="accordeon__img">
+                            <h4 class="accordeon__triger-title">Каждый второй бургер - в подарок</h4>
+                            <img src="images/accordeon-arrow.svg" alt="" class="accordeon__img">
+                        </div>
+                        <div class="accordeon__content">
+                            <p class="accordeon__text">При заказе одного бургера клиент получает второй бургер бесплатно.</p>
+                        </div>
+                    </div>
+                    <div class="accordeon__item">
+                        <div class="accordeon__triger">
+                            <img src="images/accordeon-arrow.svg" alt="" class="accordeon__img">
+                            <h4 class="accordeon__triger-title">Скидка на обеденное время</h4>
+                            <img src="images/accordeon-arrow.svg" alt="" class="accordeon__img">
+                        </div>
+                        <div class="accordeon__content">
+                            <p class="accordeon__text">Скидка 20% на все блюда с 12:00 до 15:00!</p>
+                        </div>
+                    </div>
+                    <div class="accordeon__item">
+                        <div class="accordeon__triger">
+                            <img src="images/accordeon-arrow.svg" alt="" class="accordeon__img">
+                            <h4 class="accordeon__triger-title">Бесплатный напиток к заказу</h4>
+                            <img src="images/accordeon-arrow.svg" alt="" class="accordeon__img">
+                        </div>
+                        <div class="accordeon__content">
+                            <p class="accordeon__text">При заказе от 2-х пицц Карбонара вы получаете бесплатный графин лимонада!</p>
+                        </div>
+                    </div>
+                    <div class="accordeon__item">
+                        <div class="accordeon__triger">
+                            <img src="images/accordeon-arrow.svg" alt="" class="accordeon__img">
+                            <h4 class="accordeon__triger-title">Скидка для именинников</h4>
+                            <img src="images/accordeon-arrow.svg" alt="" class="accordeon__img">
+                        </div>
+                        <div class="accordeon__content">
+                            <p class="accordeon__text">Специальная скидка и подарок именинникам! Скидка 20% к счёту и подарочный десерт "Шоколадная бомба"!</p>
+                        </div>
+                    </div>
+                    <div class="accordeon__item">
+                        <div class="accordeon__triger">
+                            <img src="images/accordeon-arrow.svg" alt="" class="accordeon__img">
+                            <h4 class="accordeon__triger-title">Акция выходного дня</h4>
+                            <img src="images/accordeon-arrow.svg" alt="" class="accordeon__img">
+                        </div>
+                        <div class="accordeon__content">
+                            <p class="accordeon__text">Скидка 15% на все блюда в воскресенье и Специальное предложение на brunch в субботу - 2 блюда по цене 1!</p>
+                        </div>
+                    </div>
+                    <div class="accordeon__item">
+                        <div class="accordeon__triger">
+                            <img src="images/accordeon-arrow.svg" alt="" class="accordeon__img">
+                            <h4 class="accordeon__triger-title">Скидка на коктейли</h4>
+                            <img src="images/accordeon-arrow.svg" alt="" class="accordeon__img">
+                        </div>
+                        <div class="accordeon__content">
+                            <p class="accordeon__text">Скидка 20% на все коктейли в пятницу!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
