--- a/index.html
+++ b/index.html
@@ -233,6 +233,35 @@
                 </div>
             </div>
         </section>
+        <section class="about__us">
+            <div class="container">
+                <h3 class="section__title">О нас</h3>
+                <div class="about__inner">
+                    <p class="about__hello">Добро пожаловать в наш ресторан!</p>
+                    <div class="about__item">
+                        <p class="about__text">Мы рады приветствовать вас в уютном уголке гастрономического наслаждения, где каждый визит становится незабываемым кулинарным путешествием. Наш ресторан - это место, где встречаются утонченный вкус, изысканная атмосфера и внимательное обслуживание.</p>
+                        <p class="about__number">01</p>
+                    </div>
+                    <div class="about__item">
+                        <p class="about__text">В основе нашей кухни лежит страсть к качественным продуктам и тщательный отбор ингредиентов. Наши шеф-повара воплощают в жизнь самые смелые кулинарные идеи, создавая блюда, которые удивляют и радуют даже самых изысканных гурманов.</p>
+                        <p class="about__number">02</p>
+                    </div>
+                    <div class="about__item">
+                        <p class="about__text">Наше меню предлагает богатый выбор блюд для каждого вкуса и предпочтения. От изысканных закусок до великолепных десертов - у нас найдется что-то для каждого гостя. Мы гордимся тем, что наши блюда не только удовлетворяют ваши вкусовые желания, но и поднимают настроение и заставляют вас возвращаться снова и снова.</p>
+                        <p class="about__number">03</p>
+                    </div>
+                    <div class="about__item">
+                        <p class="about__text">Наша команда профессионалов старается сделать ваше посещение максимально приятным и комфортным. Мы стремимся к тому, чтобы каждый гость чувствовал себя особенным и получал внимание, которое заслуживает.</p>
+                        <p class="about__number">04</p>
+                    </div>
+                    <div class="about__item">
+                        <p class="about__text">Мы приглашаем вас окунуться в мир изысканного вкуса и непринужденного общения. Посетите наш ресторан и откройте для себя новые гастрономические впечатления, которые оставят незабываемые воспоминания на всю жизнь.</p>
+                        <p class="about__number">05</p>
+                    </div>
+                    <p class="about__hello">Добро пожаловать в наш ресторан - место, где каждый гость - это наша особенность, а каждое блюдо - это наше искусство.</p>
+                </div>
+            </div>
+        </section>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
